--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.4.0",
+    "autoprefixer": "^10.4.16",
+    "daisyui": "^4.4.19",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "npm-run-all2": "^6.1.1",
+    "postcss": "^8.4.32",
     "prettier": "^3.1.0",
+    "tailwindcss": "^3.3.6",
     "typescript": "~5.2.0",
     "vite": "^4.4.11",
     "vue-tsc": "^1.8.19"
