--- a/.github/workflows/npm-grunt.yml
+++ b/.github/workflows/npm-grunt.yml
@@ -22,7 +22,19 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
+    - name: 安装依赖
+      run: npm install
+
     - name: Build
-      run: |
-        npm install
-        grunt
+      run: npm run build
+      
+    - name: 上传项目到阿里云
+      uses: appleboy/scp-action@v0.1.4
+      with:
+          host: 124.71.138.134
+          username: root
+          password: LOVExi0420..
+          #port: ${{ secrets.PORT }}
+          source: dist/**
+          target: /root/web
+          tar_dereference: true
