--- a/.github/workflows/npm-grunt.yml
+++ b/.github/workflows/npm-grunt.yml
@@ -2,9 +2,9 @@ name: NodeJS with Grunt
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ['main']
   pull_request:
-    branches: [ "main" ]
+    branches: ['main']
 
 jobs:
   build:
@@ -15,25 +15,25 @@ jobs:
         node-version: [16.x]
 
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
 
-    - name: 安装依赖
-      run: npm install
+      - name: 安装依赖
+        run: npm install
 
-    - name: Build
-      run: npm run build
-      
-    - name: 上传项目到阿里云
-      uses: appleboy/scp-action@v0.1.4
-      with:
-          host: 124.71.138.134
+      - name: Build
+        run: npm run build
+
+      - name: 上传项目到华为云
+        uses: appleboy/scp-action@v0.1.4
+        with:
+          host: ${{ secrets.HOST }}
           username: root
-          password: LOVExi0420..
+          password: ${{ secrets.PASSWORD }}
           #port: ${{ secrets.PORT }}
           source: dist/**
           target: /root/web
