--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -2,9 +2,9 @@ name: NodeJS with Grunt
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "server" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "server" ]
 
 jobs:
   build:
