--- a/.github/workflows/npm-grunt.yml
+++ b/.github/workflows/npm-grunt.yml
@@ -2,9 +2,9 @@ name: web
 
 on:
   push:
-    branches: ['main']
+    branches: ['web']
   pull_request:
-    branches: ['main']
+    branches: ['web']
 
 jobs:
   build:
