--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -35,8 +35,17 @@ jobs:
           target: /root/web-server
           tar_dereference: true
 
+      - name: 删除镜像
+        run: docker rmi my-app
+
+      - name: 停止容器
+        run: docker stop my-app
+
+      - name: 删除容器
+        run: docker rm my-app
+
       - name: 构建镜像
         run: docker build -t my-app .
 
       - name: 启动容器
-        run: docker run -p 1216:1216 my-app -name my-app
+        run: docker run -p 1216:1216 my-app --name my-app
