--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -38,14 +38,14 @@ jobs:
       - name: 查看容器
         run: docker ps -a
 
-      - name: 停止容器
-        run: docker stop my-app
+      # - name: 停止容器
+      #   run: docker stop my-app
 
-      - name: 删除容器
-        run: docker rm my-app
+      # - name: 删除容器
+      #   run: docker rm my-app
 
-      - name: 删除镜像
-        run: docker rmi my-app:latest
+      # - name: 删除镜像
+      #   run: docker rmi my-app:latest
 
       - name: 构建镜像
         run: docker build -t my-app .
