--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -51,4 +51,4 @@ jobs:
         run: docker build -t my-app .
 
       - name: 启动容器
-        run: docker run -p 1216:1216 my-app --name my-app
+        run: docker run -p 1216:1216 my-app
