--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -51,7 +51,7 @@ jobs:
         run: docker build -t my-app .
 
       - name: 启动容器
-        run: docker run -p 1216:1216 my-app
+        run: docker run --name my-app -p 1216:1216 my-app
 
       - name: 查看容器
         run: docker ps -a
