--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -34,30 +34,18 @@ jobs:
           source: ./*
           target: /root/web-server
           tar_dereference: true
-          script_after: |
-            docker ps -a
-            docker stop my-app
-            docker rm my-app:latest
-            docker build -t my-app .
-            docker run -d --name my-app -p 1216:1216 my-app
 
-      # - name: 查看容器
-      #   run: docker ps -a
+      - name: 构建镜像
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
+          # push: true
+          tags: my-app
 
-      # - name: 停止容器
-      #   run: docker stop my-app
-
-      # - name: 删除容器
-      #   run: docker rm my-app
-
-      # - name: 删除镜像
-      #   run: docker rmi my-app:latest
-
-      # - name: 构建镜像
-      #   run: docker build -t my-app .
-
-      # - name: 启动容器
-      #   run: docker run -d --name my-app -p 1216:1216 my-app
-
-      # - name: 查看容器
-      #   run: docker ps -a
+      - name: 启动容器
+        uses: damianfraser/docker-action@master
+        with:
+          action: run
+          image: my-app
+          options: -d -p 1216:1216 --name web-server
