--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -35,16 +35,19 @@ jobs:
           target: /root/web-server
           tar_dereference: true
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: 构建镜像
         uses: docker/build-push-action@v2
         with:
           context: .
           file: ./Dockerfile
-          # push: true
+          push: true
           tags: my-app
 
       - name: 启动容器
-        uses: damianfraser/docker-action@master
+        uses: docker/build-push-action@v2
         with:
           action: run
           image: my-app
