--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -43,7 +43,7 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
-          push: true
+          # push: true
           tags: my-app
       - name: Login to Docker Hub
         uses: docker/login-action@v3
