--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -17,6 +17,14 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      - name: 安装依赖
+        run: npm install
+
       - name: 上传项目到华为云
         uses: appleboy/scp-action@v0.1.4
         with:
