--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^1.6.2",
     "dayjs": "^1.11.10",
+    "echarts": "^5.4.3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
